# cat-facts-mcp

./: .vscode-settings.example.json  LICENSE  README.md  pyproject.toml
src/cat_facts_mcp/: __init__.py  server.py
tests/: test_server.py
