[project]
name = "cat-facts-mcp"
version = "0.1.0"
description = "MCP server to get random cat facts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0"
]

[project.scripts]
cat-facts-mcp = "cat_facts_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
